--- a/Damas/src/damas/mensajes.properties
+++ b/Damas/src/damas/mensajes.properties
@@ -12,3 +12,27 @@ English_button= INGL\u00c9S
 not_exit_jugador=No existe el Jugador
 welcome_label= Bienvenido, Cargue o inicie nueva partida
 language_label=Idioma del juego cambiado a espa\u00f1ol
+controlador-------------
+name_comenzar_jugar= Introduce un nombre y selecciona modo de juego para empezar
+hello=Hola
+Start_user= Empieza a jugar eligiendo una ficha para mover
+name_file=Escribe el nombre del fichero que quieres cargar
+turno_selec_Tab=Es tu turno. Selecciona una ficha para mover
+habilitar_siguiente=Es su turno. Pulsa el bot\u00f3n para que tu contrincante haga su movimiento
+move_tab_pos=Has movido tu ficha de la posici\u00f3n
+seguir_comiendo=Puedes seguir comiendo. Escoge d\u00f3nde quieres moverte con esa ficha 
+contrincante_mueve=Ha terminado tu turno. Pulsa el bot\u00f3n para que tu contrincante haga su movimiento
+select_move=Escoge una posici\u00f3n a la que mover la ficha seleccionada
+select_valid_box=Escoge una casilla v\u00e1lida
+have_to_select= Tienes que seleccionar tu ficha para moverla
+select_move1=Escoge una posici\u00f3n a la que mover la ficha seleccionada
+attack_response=Tu contrincante ha respondido a tu movimiento
+turno_have_move=Es tu turno, hasta que no muevas no puede jugar tu contrincante
+file_not_found=El fichero que quieres cargar no se encuentra
+file_to_save=Escribe el nombre del fichero que quieres guardar
+game_finish=La partida ha terminado. Carga una partida o empieza una nueva
+turn_opponent=Le toca jugar a tu contrincante, pulsa el bot\u00f3n para que haga su movimiento
+dont_move_load_file=No puedes jugar hasta que no cargues una partida o empieces una nueva
+derrota=Oh! \u00a1Vaya l\u00e1stima! \u00a1Has perdido la partida!
+stadistics=Estad\u00edsticas
+victoria=Enhorabuena! \u00a1Has ganado la partida!
