--- a/Damas/src/damas/mensajes.properties
+++ b/Damas/src/damas/mensajes.properties
@@ -1,7 +1,7 @@
 name_label=Nombre
-play_mode_label=Mode de juego
+play_mode_label=Modo de juego
 attack_mode_radio_button=Modo agresivo
-defensive_mode_radio_button=Modo defensivo
+defensive_mode_radio_button=Modeo defensivo
 random_mode_radio_button=Modo aleatorio
 save_game_button= Guardar partida
 charge_game_button= Cargar partida
@@ -9,8 +9,8 @@ move_machine= Mueve m\u00e1quina
 start_button= Comenzar
 spanish_button= ESPA\u00d1OL
 English_button= INGL\u00c9S
-not_exit_jugador=No existe el Jugador
-welcome_label= Bienvenido, Cargue o inicie nueva partida
+not_exit_jugador=No existe jugador
+welcome_label= Bienvenido. Elige cargar partida o comenzar una nueva
 language_label=Idioma del juego cambiado a espa\u00f1ol
 controlador-------------
 name_comenzar_jugar= Introduce un nombre y selecciona modo de juego para empezar
@@ -33,6 +33,8 @@ file_to_save=Escribe el nombre del fichero que quieres guardar
 game_finish=La partida ha terminado. Carga una partida o empieza una nueva
 turn_opponent=Le toca jugar a tu contrincante, pulsa el bot\u00f3n para que haga su movimiento
 dont_move_load_file=No puedes jugar hasta que no cargues una partida o empieces una nueva
-derrota=Oh! \u00a1Vaya l\u00e1stima! \u00a1Has perdido la partida!
+derrota=\u00a1Oh! \u00a1Vaya l\u00e1stima! \u00a1Has perdido la partida!
 stadistics=Estad\u00edsticas
-victoria=Enhorabuena! \u00a1Has ganado la partida!
+victoria=\u00a1Enhorabuena! \u00a1Has ganado la partida!
+
+
